--- a/src/com/yahiab/graphix/view/RootLayout.fxml
+++ b/src/com/yahiab/graphix/view/RootLayout.fxml
@@ -38,65 +38,146 @@
                    <Pane fx:id="pane" prefHeight="200.0" prefWidth="200.0" StackPane.alignment="CENTER"/>
                    <GridPane alignment="CENTER">
                        <columnConstraints>
-                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="275.0" prefWidth="250.0"/>
+                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="275.0" prefWidth="250.0"/>
+                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="275.0" prefWidth="250.0"/>
                        </columnConstraints>
                        <rowConstraints>
-                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                           <RowConstraints maxHeight="175.0" minHeight="175.0" prefHeight="200.0" vgrow="SOMETIMES"/>
+                           <RowConstraints maxHeight="175.0" minHeight="175.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                           <RowConstraints maxHeight="175.0" minHeight="175.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                        </rowConstraints>
                        <children>
-                           <Button fx:id="btn3DApp" alignment="CENTER" contentDisplay="CENTER" maxHeight="300.0"
-                                   maxWidth="300.0" minHeight="150.0" minWidth="300.0" mnemonicParsing="false"
-                                   onAction="#actionButton3D" prefHeight="150.0" prefWidth="300.0"
-                                   GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <GridPane GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowSpan="2"
+                                     GridPane.valignment="CENTER">
                                <GridPane.margin>
                                    <Insets bottom="15.0" top="15.0"/>
                                </GridPane.margin>
-                           </Button>
-                           <Button fx:id="btnDemos" alignment="CENTER" contentDisplay="CENTER" maxHeight="300.0"
-                                   maxWidth="300.0" minHeight="150.0" minWidth="300.0" mnemonicParsing="false"
-                                   onAction="#actionButtonDemos" prefHeight="150.0" prefWidth="300.0"
-                                   GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                               <columnConstraints>
+                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               </columnConstraints>
+                               <rowConstraints>
+                                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
+                                                   vgrow="SOMETIMES"/>
+                               </rowConstraints>
+                               <children>
+                                   <Button fx:id="btn3DApp" alignment="CENTER" contentDisplay="CENTER" maxHeight="292.0"
+                                           maxWidth="300.0" minHeight="292.0" minWidth="475.0" mnemonicParsing="false"
+                                           onAction="#actionButton3D" prefHeight="292.0" prefWidth="300.0"
+                                           GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                                   <Label text="Editeur graphique 3D" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                                          GridPane.valignment="CENTER"/>
+                               </children>
+                           </GridPane>
+                           <GridPane GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                                     GridPane.valignment="CENTER">
                                <GridPane.margin>
                                    <Insets bottom="15.0" top="15.0"/>
                                </GridPane.margin>
-                           </Button>
-                           <Button fx:id="btn2DApp" alignment="CENTER" contentDisplay="CENTER" maxHeight="300.0"
-                                   maxWidth="300.0" minHeight="150.0" minWidth="300.0" mnemonicParsing="false"
-                                   onAction="#actionButton2D" prefHeight="150.0" prefWidth="300.0"
-                                   GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                               <columnConstraints>
+                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               </columnConstraints>
+                               <rowConstraints>
+                                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
+                                                   vgrow="SOMETIMES"/>
+                               </rowConstraints>
+                               <children>
+                                   <Button fx:id="btnDemos" alignment="CENTER" contentDisplay="CENTER" maxHeight="120.0"
+                                           maxWidth="200.0" minHeight="120.0" minWidth="200.0" mnemonicParsing="false"
+                                           onAction="#actionButtonDemos" prefHeight="120.0" prefWidth="200.0"
+                                           GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                                   <Label text="Animations" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                                          GridPane.valignment="CENTER"/>
+                               </children>
+                           </GridPane>
+                           <GridPane GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                                     GridPane.valignment="CENTER">
                                <GridPane.margin>
                                    <Insets bottom="15.0" top="15.0"/>
                                </GridPane.margin>
-                           </Button>
-                           <Button fx:id="btnQuiz" alignment="CENTER" contentDisplay="CENTER" maxHeight="300.0"
-                                   maxWidth="300.0" minHeight="150.0" minWidth="300.0" mnemonicParsing="false"
-                                   onAction="#actionButtonQuiz" prefHeight="150.0" prefWidth="300.0"
-                                   GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1"
-                                   GridPane.valignment="CENTER">
+                               <columnConstraints>
+                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               </columnConstraints>
+                               <rowConstraints>
+                                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0"
+                                                   vgrow="SOMETIMES"/>
+                               </rowConstraints>
+                               <children>
+                                   <Button fx:id="btn2DApp" alignment="CENTER" contentDisplay="CENTER" maxHeight="120.0"
+                                           maxWidth="200.0" minHeight="120.0" minWidth="200.0" mnemonicParsing="false"
+                                           onAction="#actionButton2D" prefHeight="120.0" prefWidth="200.0"
+                                           GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                                   <Label text="Editeur graphique 2D" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                                          GridPane.valignment="CENTER"/>
+                               </children>
+                           </GridPane>
+                           <GridPane GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                                <GridPane.margin>
                                    <Insets bottom="15.0" top="15.0"/>
                                </GridPane.margin>
-                           </Button>
-                           <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="300.0" maxWidth="300.0"
-                                   minHeight="150.0" minWidth="300.0" mnemonicParsing="false"
-                                   onAction="#actionButtonVideos" prefHeight="150.0" prefWidth="300.0"
-                                   GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                               <columnConstraints>
+                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               </columnConstraints>
+                               <rowConstraints>
+                                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
+                                                   vgrow="SOMETIMES"/>
+                               </rowConstraints>
+                               <children>
+                                   <Button fx:id="btnQuiz" alignment="CENTER" contentDisplay="CENTER" maxHeight="120.0"
+                                           maxWidth="200.0" minHeight="120.0" minWidth="200.0" mnemonicParsing="false"
+                                           onAction="#actionButtonQuiz" prefHeight="120.0" prefWidth="200.0"
+                                           GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                                   <Label text="Cours et quiz" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                                          GridPane.valignment="CENTER"/>
+                               </children>
+                           </GridPane>
+                           <GridPane GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                                <GridPane.margin>
                                    <Insets bottom="15.0" top="15.0"/>
                                </GridPane.margin>
-                           </Button>
-                           <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="300.0" maxWidth="300.0"
-                                   minHeight="150.0" minWidth="300.0" mnemonicParsing="false"
-                                   onAction="#actionButtonPDF" prefHeight="150.0" prefWidth="300.0"
-                                   GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2"
-                                   GridPane.valignment="CENTER">
+                               <columnConstraints>
+                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               </columnConstraints>
+                               <rowConstraints>
+                                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
+                                                   vgrow="SOMETIMES"/>
+                               </rowConstraints>
+                               <children>
+                                   <Button fx:id="btnVideos" alignment="CENTER" contentDisplay="CENTER"
+                                           maxHeight="120.0" maxWidth="200.0" minHeight="120.0" minWidth="200.0"
+                                           mnemonicParsing="false" onAction="#actionButtonVideos" prefHeight="120.0"
+                                           prefWidth="200.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                                   <Label text="Vidéos" GridPane.halignment="CENTER" GridPane.rowIndex="1"
+                                          GridPane.valignment="CENTER"/>
+                               </children>
+                           </GridPane>
+                           <GridPane GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                                     GridPane.valignment="CENTER">
                                <GridPane.margin>
                                    <Insets bottom="15.0" top="15.0"/>
                                </GridPane.margin>
-                           </Button>
+                               <columnConstraints>
+                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               </columnConstraints>
+                               <rowConstraints>
+                                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
+                                                   vgrow="SOMETIMES"/>
+                               </rowConstraints>
+                               <children>
+                                   <Button fx:id="btnPDFs" alignment="CENTER" contentDisplay="CENTER" maxHeight="120.0"
+                                           maxWidth="200.0" minHeight="120.0" minWidth="200.0" mnemonicParsing="false"
+                                           onAction="#actionButtonPDF" prefHeight="120.0" prefWidth="200.0"
+                                           GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                                   <Label text="Patrons des formes 3D" GridPane.halignment="CENTER"
+                                          GridPane.rowIndex="1" GridPane.valignment="CENTER"/>
+                               </children>
+                           </GridPane>
                        </children>
                    </GridPane>
                </children>
